adjust links and width

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
      </ul>
 
      <div id="social-links">
-       <a href="" target="">
+       <a href="https://github.com/Gihxs" target="_blank">
      <ion-icon name="logo-github"></ion-icon>
        </a>
        <a href="" target="">
@@ -46,7 +46,7 @@
        <a href="" target="">
      <ion-icon name="logo-youtube"></ion-icon>
        </a>
-       <a href="" target="">
+       <a href="https://www.linkedin.com/in/giovana-santos-silva-36445822a/" target="_blank">
      <ion-icon name="logo-linkedin"></ion-icon>
        </a>
      </div>
