--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="container">
      <div id="profile">
-        <img src="./images/avatar-dark.png" alt="foto de um cara aleatório">
+        <img src="./images/Avatar-light.png" alt="foto de Giovana santos">
         <p>@Giihsnt0s</p>
      </div>
      <div id="switch" onclick="toggLeMode()">
@@ -23,16 +23,16 @@
      </div>
      <ul>
         <li>
-            <a href="#">Inscreva-se no NLW</a>
+          <a href="https://www.linkedin.com/in/giovana-santos-silva-36445822a/">Conecte-se comigo no Linkedin</a>
         </li>
         <li>
-            <a href="#">Baixe meu e-book</a>
+          <a href="https://github.com/Gihxs">Veja meu perfil no Github</a>
         </li>
         <li>
-            <a href="#">Veja meu portfólio</a>
+          <a href="https://www.instagram.com/giihsnt0s/">Me siga no Instagram</a>
         </li>
         <li>
-            <a href="#">Conheça o Explorer</a>
+            <a href="#">Visite meu canal no Youtube</a>
         </li>
      </ul>
 
@@ -40,10 +40,10 @@
        <a href="https://github.com/Gihxs" target="_blank">
      <ion-icon name="logo-github"></ion-icon>
        </a>
-       <a href="" target="">
+       <a href="https://www.instagram.com/giihsnt0s/" target="_blank">
      <ion-icon name="logo-instagram"></ion-icon>
        </a>
-       <a href="" target="">
+       <a href="https://www.youtube.com/channel/UCJKw5JrlhKju6RB3uLV3vYg" target="_blank">
      <ion-icon name="logo-youtube"></ion-icon>
        </a>
        <a href="https://www.linkedin.com/in/giovana-santos-silva-36445822a/" target="_blank">
@@ -52,7 +52,7 @@
      </div>
 
      <footer>
-        Feito com ♥ pela <a href="https://rocketseat.com.br"> Giovana </a>
+        Feito com ♥ pela <a href="https://www.linkedin.com/in/giovana-santos-silva-36445822a/"> Giovana </a>
      </footer>
     </div>
 
