--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div id="container">
      <div id="profile">
-        <img src="./images/Avatar-light.png" alt="foto de Giovana santos">
+        <img src="./images/Avatar-dark.png" alt="foto de Giovana santos">
         <p>@Giihsnt0s</p>
      </div>
      <div id="switch" onclick="toggLeMode()">
